# order-processin-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
k8s/: kafka.yaml  keda-scalers.yaml  namespace.yaml  postgres.yaml  services.yaml
observability/: prometheus.yml
observability/grafana/dashboards/: order-processing.json
observability/grafana/provisioning/dashboards/: dashboard.yml
order_platform/: __init__.py
order_platform/common/: __init__.py  config.py  database.py  events.py  kafka.py  metrics.py  tracing.py
order_platform/services/api_gateway/: app.py
order_platform/services/dlq_monitor/: worker.py
order_platform/services/inventory_service/: worker.py
order_platform/services/order_service/: worker.py
order_platform/services/payment_service/: worker.py
order_platform/services/saga_orchestrator/: worker.py
order_platform/services/shipping_service/: worker.py
order_platform/sql/: schema.sql
tests/: test_events.py  test_imports.py  test_saga.py
